--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
         android:theme="@style/Theme.MEDIC"
         tools:targetApi="31">
         <activity
+            android:name=".consultnow"
+            android:exported="false" />
+        <activity
+            android:name=".general"
+            android:exported="false" />
+        <activity
             android:name=".LoginActivity"
             android:exported="false" />
         <activity
