--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,11 +14,16 @@
         android:theme="@style/Theme.MEDIC"
         tools:targetApi="31">
         <activity
-            android:name=".consultnow"
+            android:name=".Appoinment"
             android:exported="false" />
         <activity
+            android:name=".consultnow"
+            android:exported="false"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+        <activity
             android:name=".general"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity
             android:name=".LoginActivity"
             android:exported="false" />
@@ -27,7 +32,8 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="false"/>
+            android:exported="false"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity
             android:name=".Splashscreen"
             android:exported="true">
