--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MEDIC"
         tools:targetApi="31">
+
+
+        <activity
+            android:name=".payment"
+            android:exported="false" />
         <activity
             android:name=".Appoinment"
             android:exported="false" />
