--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MEDIC"
         tools:targetApi="31">
-
-
+        <activity
+            android:name=".profilepage"
+            android:exported="false" />
         <activity
             android:name=".payment"
             android:exported="false" />
